--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "author": "Dharanidharan",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.0",
+    "validator": "^13.15.15"
   }
 }
